fixed an issue with mobile responsiveness that was causing images to jump oddly and items in the subnav to be pushed offscreen at very small widths.

--- a/src/App.css
+++ b/src/App.css
@@ -27,6 +27,7 @@ h1 {
 
 .navItems {
   margin: 20px;
+  display: flex;
   border-radius: 5px;
   min-width: 350px;
   align-items: center;
@@ -34,6 +35,7 @@ h1 {
 }
 
 .navItems .link {
+  display: flex;
   padding-left: 10%;
   padding-right: 10%;
   padding-top: 10px;
@@ -41,13 +43,17 @@ h1 {
   margin-left: 3%;
   margin-right:3%;
   border-radius: 5px;
-  flex-flow: row;
+  flex-flow: row wrap;
   align-items: center;
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
 .navItems .link:hover{
   background-color: rgb(169, 211,255)
+}
+
+.works {
+  width: 100%
 }
 
 .subnav .link{
@@ -57,7 +63,7 @@ h1 {
   padding-bottom:10px;
   margin-left: 3%;
   margin-right:3%;
-  margin-bottom: 50px;
+  margin-bottom: 20px;
   border-radius: 5px;
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
@@ -80,7 +86,8 @@ h1 {
 }
 .App {
   text-align: center;
-  background-color: rgb(147, 172, 182)
+  background-color: rgb(147, 172, 182);
+  min-width: 350px;
 }
 .works-container {
   width: 100%;
@@ -120,7 +127,7 @@ h1 {
 
 
 @media only screen 
-  and (max-device-width: 320px) {
+  and (max-width: 650px) {
     .navItems .link {
       padding-left: 7%;
       padding-right: 7%;
@@ -130,6 +137,12 @@ h1 {
     .subnav {
       display: flex;
       flex-flow: column nowrap;
+    }
+
+    .img {
+      width:78%;
+      margin: 10px;
+      height:auto;
     }
   }
 
